--- a/CampusRecuretmentsystem/app/src/main/res/layout/fragment_compony_name.xml
+++ b/CampusRecuretmentsystem/app/src/main/res/layout/fragment_compony_name.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.babarmustafa.campusrecuretmentsystem.ComponyNAme_to_Students"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
     <ListView
         android:id="@+id/list_view_for_componuyname"
         android:layout_width="match_parent"
