--- a/CampusRecuretmentsystem/app/src/main/res/layout/fragment_jobs.xml
+++ b/CampusRecuretmentsystem/app/src/main/res/layout/fragment_jobs.xml
@@ -1,13 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babarmustafa.campusrecuretmentsystem.Jobs">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context="com.example.babarmustafa.campusrecuretmentsystem.Jobs"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
+    <ListView
+        android:id="@+id/list_view_all_jobs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"></ListView>
 
-</FrameLayout>
+
+</LinearLayout>
