--- a/CampusRecuretmentsystem/app/src/main/res/layout/fragment_student_sign_in.xml
+++ b/CampusRecuretmentsystem/app/src/main/res/layout/fragment_student_sign_in.xml
@@ -15,6 +15,7 @@
         android:padding="5dp"
         android:id="@+id/e_email"
         android:hint="Email"
+        android:text="babar@g.com"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
        />
@@ -25,6 +26,7 @@
         android:layout_marginTop="10dp"
         android:id="@+id/e_pass"
         android:hint="Password"
+        android:text="1234567"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
        />
