--- a/CampusRecuretmentsystem/app/src/main/res/layout/single_student_show.xml
+++ b/CampusRecuretmentsystem/app/src/main/res/layout/single_student_show.xml
@@ -2,13 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/usernullimage"/>
     <TextView
         android:id="@+id/v_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello"
         android:textColor="@color/colorAccent"
-        android:textSize="50dp" />
+        android:textSize="40dp" />
 
+    </LinearLayout>
 </LinearLayout>
