--- a/AuctionSystem/app/src/main/res/layout/fragment_laptops.xml
+++ b/AuctionSystem/app/src/main/res/layout/fragment_laptops.xml
@@ -17,6 +17,12 @@
         android:hint="Enter the p_city"
         android:id="@+id/edit_text2"
         android:layout_marginLeft="5dp"/>
+    <EditText
+        android:id="@+id/bid_u"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter the strting bid "
+       />
 
 
     <Button
@@ -25,9 +31,10 @@
         android:text="Add"
         android:id="@+id/button_add"
         android:layout_gravity="center"/>
-    <ListView
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:numColumns="2"
         android:id="@+id/email_List"/>
 
 
