--- a/AuctionSystem/app/src/main/res/layout/activity_details_.xml
+++ b/AuctionSystem/app/src/main/res/layout/activity_details_.xml
@@ -14,7 +14,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+       android:layout_margin="10dp"
+        android:background="@drawable/for_rounded_corners">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
