--- a/AuctionSystem/app/src/main/res/layout/fragment_laptops.xml
+++ b/AuctionSystem/app/src/main/res/layout/fragment_laptops.xml
@@ -35,6 +35,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:columnWidth="90dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
         android:id="@+id/email_List"/>
 
 
