--- a/AuctionSystem/app/src/main/res/layout/singleitem.xml
+++ b/AuctionSystem/app/src/main/res/layout/singleitem.xml
@@ -2,8 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/for_rounded_corners"
+    android:layout_margin="10dp">
 
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/fpr_zip"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
